refactor: change 1D cells List into 2D array